--- a/nginx/app.conf
+++ b/nginx/app.conf
@@ -2,37 +2,39 @@ server {
     listen 80;
     server_name _;
 
-    # Root directory for frontend static files
+    # =========================
+    # Frontend (Vite build)
+    # =========================
     root /usr/share/nginx/html;
     index index.html;
 
-    # Proxy API requests to backend service
-    location /api {
-        proxy_pass http://backend:8000;
+    location / {
+        try_files $uri /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
+
+    # =========================
+    # Backend API
+    # =========================
+    location /api/ {
+        proxy_pass http://backend:5000/;
+        proxy_http_version 1.1;
+
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
     }
 
-    # Enable gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/javascript application/json;
-
-    # Cache static assets
+    # =========================
+    # Static asset caching
+    # =========================
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         try_files $uri =404;
     }
 
-    # Serve frontend static files - SPA fallback to index.html
-    location / {
-        try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-    }
+    gzip on;
+    gzip_types application/json text/css application/javascript text/plain;
 }
